--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ datasets==3.4.1
 ipython==8.12.3
 matplotlib==3.10.1
 numpy==1.26.4
-opencv-contrib-python==4.11.0.86
+opencv-contrib-python==4.11.0.86  # Only keep this one
 paddleocr==2.9.1
 Pillow==11.1.0
 protobuf==3.20.3
