--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ datasets==3.4.1
 ipython==8.12.3
 matplotlib==3.10.1
 numpy==1.26.4
-opencv-python-headless==4.11.0.86  # Use headless OpenCV
-paddlepaddle==2.6.1  # Ensure PaddlePaddle is installed
+opencv-contrib-python-headless==4.5.5.64  # Stable version for cloud environments
+paddlepaddle==2.6.1
 paddleocr==2.9.1
 Pillow==11.1.0
 protobuf==3.20.3
