--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 datasets==3.4.1
-ipython==8.12.3
-matplotlib==3.10.1
+ipython==8.12.0                 # Compatible with Python 3.9
+matplotlib==3.7.5              # 3.10.1 requires Python >=3.10
 numpy==1.26.4
-opencv-contrib-python-headless==4.5.5.64  # Stable version for cloud environments
+opencv-python-headless==4.8.1.78  # 4.11 requires Python >=3.10
 paddlepaddle==2.6.1
 paddleocr==2.9.1
-Pillow==11.1.0
+Pillow==10.3.0                 # Pillow 11+ requires Python >=3.10
 protobuf==3.20.3
-scikit-learn==1.6.1
-scipy==1.15.2
-scikit-image==0.22.0
+scikit-learn==1.3.2            # 1.6+ requires Python >=3.10
+scipy==1.11.4                  # 1.15+ requires Python >=3.10
+scikit-image==0.21.0           # 0.22 requires Python >=3.10
 streamlit==1.44.0
-torch==2.3.1
-transformers==4.49.0
-ultralytics==8.3.59
+torch==2.1.2                   # 2.3.1 requires Python >=3.10
+transformers==4.36.2           # 4.49.0 requires Python >=3.10
+ultralytics==8.0.204           # 8.3.59 requires Python >=3.10
