--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python_version == "3.10"
 datasets==3.4.1
 ipython==8.12.0                 # Compatible with Python 3.9
 matplotlib==3.7.5              # 3.10.1 requires Python >=3.10
