--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-python_version == "3.10"
 datasets==3.4.1
-ipython==8.12.0                 # Compatible with Python 3.9
-matplotlib==3.7.5              # 3.10.1 requires Python >=3.10
+ipython==8.12.0
+matplotlib==3.10.1
 numpy==1.26.4
-opencv-python-headless==4.8.1.78  # 4.11 requires Python >=3.10
+opencv-python-headless==4.11.0.25
 paddlepaddle==2.6.1
 paddleocr==2.9.1
-Pillow==10.3.0                 # Pillow 11+ requires Python >=3.10
+Pillow==11.2.0
 protobuf==3.20.3
-scikit-learn==1.3.2            # 1.6+ requires Python >=3.10
-scipy==1.11.4                  # 1.15+ requires Python >=3.10
-scikit-image==0.21.0           # 0.22 requires Python >=3.10
+scikit-learn==1.6.0
+scipy==1.15.1
+scikit-image==0.22.0
 streamlit==1.44.0
-torch==2.1.2                   # 2.3.1 requires Python >=3.10
-transformers==4.36.2           # 4.49.0 requires Python >=3.10
-ultralytics==8.0.204           # 8.3.59 requires Python >=3.10
+torch==2.3.1
+transformers==4.49.0
+ultralytics==8.3.59
